<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:umadsdk="http://schemas.android.com/apk/res/com.sky.sms.adv.main"
	    android:orientation="vertical"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:paddingBottom="3dip">
	    
	<LinearLayout 
		android:id="@+id/AdLinearLayout" 
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:gravity="center_horizontal"/>

	
	<RelativeLayout android:id="@+id/listFooter2"
		android:layout_alignParentBottom="true" 
		android:layout_width="fill_parent"
		android:orientation="horizontal"
		android:background="@drawable/jbshape2" 
		android:paddingRight="10dip"
		android:layout_height="wrap_content">
		
		<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"     
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"     
			android:stretchColumns="0,1,2"
			android:layout_centerHorizontal="true"
			android:background="@color/lightdark"> 
			
			<TableRow > 
	    	   	<Button  android:id="@+id/delete_select_filt_num_button" 
					 android:layout_width="wrap_content"  
		             android:layout_height="wrap_content"
					 android:text="@string/delete_select_all_str"
					 android:gravity="center"/>
	
		     	<Button  android:id="@+id/delete_no_select_filt_num_button" 
				     android:layout_width="wrap_content"  
	                 android:layout_height="wrap_content"
	                 android:gravity="center"
				     android:text="@string/delete_no_select_all_str"/>
	
		        <Button android:id="@+id/delete_more_filt_num_button" 
		        	  android:layout_width="wrap_content"  
	                  android:layout_height="wrap_content"
	                  android:gravity="center"
		              android:text="@string/delete_select_str"/>
		      </TableRow> 
		</TableLayout>
	</RelativeLayout>
	
	<ListView android:id="@id/android:list"
            android:layout_width="fill_parent"  
            android:layout_height="fill_parent"
            android:layout_below="@+id/adView"
            android:layout_above="@id/listFooter2"/>  
  
    <TextView android:id="@id/android:empty"  
		  android:layout_below="@+id/adView"
          android:layout_width="fill_parent"  
          android:layout_height="wrap_content"  
          android:textColor="@color/red"
          android:textSize="20dip"
          android:gravity="center"
          android:background="@color/lightdark"
          android:paddingLeft="15dip"
          android:text="@string/sms_filt_delete_no"/>  
</RelativeLayout>